docs: improved documentation

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example experiments"
+    "# Example experiment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "experiment description"
+    "Let's launch a \"Hello world\" experiment in three different languages! Here we leverage the slurm arrayjob feature to run the same job in parallel."
    ]
   },
   {
@@ -21,20 +21,27 @@
    "outputs": [],
    "source": [
     "# Experiment configuration\n",
-    "main = \"example.py\"\n",
+    "\n",
+    "project_name = \"example\" # Choose a name for your project\n",
+    "\n",
+    "main = \"example.py\" # The main script to run\n",
+    "\n",
+    "# This is a \"GridConfig\" structure, which represents multiple configurations to evaluate for our \"example.py\" file.\n",
     "config = {\n",
-    "    \"string\": [\n",
+    "    \"string\": [ # example.py takes a --string argument, here the array of values tells the runner to run the script with each of these values\n",
     "        \"Hello, World!\",\n",
     "        \"Ciao Mondo!\",\n",
     "        \"Merhaba Dünya!\",\n",
     "    ]\n",
     "}\n",
+    "\n",
+    "# This is a list of configuration names, which will help us identify the logs later\n",
     "config_names = [\n",
-    "    \"example\",\n",
+    "    \"example\", # This string will be concatenated to each configuration name\n",
     "    [\n",
-    "        \"en\",\n",
-    "        \"it\",\n",
-    "        \"tr\",\n",
+    "        \"en\",  # This will make the 1st configuration name \"example_en\"\n",
+    "        \"it\",  # This will make the 2nd configuration name \"example_it\"\n",
+    "        \"tr\",  # This will make the 3rd configuration name \"example_tr\"\n",
     "    ]\n",
     "]"
    ]
@@ -46,6 +53,9 @@
    "outputs": [],
    "source": [
     "# Environment configuration\n",
+    "# Here we can define additional arguments for the template\n",
+    "\n",
+    "# since we are using a slurm template we can define the slurm configuration, may vary depending on the cluster\n",
     "slurm_config = {\n",
     "    \"time\": \"10:00:00\",\n",
     "    \"mem\": \"64G\",\n",
@@ -53,11 +63,12 @@
     "    \"gres\": \"gpu:a100:1\"\n",
     "}\n",
     "\n",
-    "env = \"../templates/env/base.env\"\n",
-    "\n",
+    "# This will be run before the experiment, useful for setting up the environment\n",
     "run_before = f\"\"\"\n",
     "source $HOME/venvs/base/bin/activate\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# Check out the template file for more arguments"
    ]
   },
   {
@@ -66,9 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "sys.path.insert(1, '../')"
+    "# Add the HPCTools to the path so that we can import the libraries\n",
+    "import sys; sys.path.insert(1, '../')"
    ]
   },
   {
@@ -92,11 +102,13 @@
     }
    ],
    "source": [
-    "from runners import TritonRunner\n",
-    "from utils import GridConfig, flatten_names\n",
+    "import src.runners as r\n",
+    "from src.utils import GridConfig, flatten_names\n",
     "\n",
-    "runner = TritonRunner(\n",
-    "    workdir=\"/home/myhome/workspace/example\",\n",
+    "# Here we need to use the appropriate runner, since the cluster login node is accessible via SSH we use the SSHRunner\n",
+    "runner = r.SSHRunner(\n",
+    "    project_name=project_name,\n",
+    "    workdir=f\"/home/myhome/workspace/{project_name}\", # This is the remote directory where workspace for this project will be created\n",
     "    hostname=\"hpc.example.it\",\n",
     "    username=\"example\",\n",
     "    key_filename=\"~/.ssh/example\",\n",
@@ -124,15 +136,13 @@
     "runner.run(\n",
     "    subexperiment_name=main.split(\".\")[0],\n",
     "    template=\"../templates/slurm/arrayjob.slurm.j2\",\n",
-    "    template_args={\n",
+    "    template_args={ # You can pass additional arguments to the template here\n",
     "        \"slurm_args\": slurm_config,\n",
-    "        \"env\": open(env).read(),\n",
     "        \"run_before\": run_before,\n",
     "        \"script_config_names\": flatten_names(config_names),\n",
     "        \"script_configs\": GridConfig(config).flatten(to_args=True),\n",
-    "        \"script\": f\"python3 {main}\",\n",
+    "        \"script\": f\"python3 {main}\", # This is the command that will be run on the cluster\n",
     "        \"run_after\": \"\",\n",
-    "        \"wandb_project_name\": \"\"\n",
     "    }\n",
     ")"
    ]
@@ -141,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subexperiment 2"
+    "### Monitoring"
    ]
   },
   {
@@ -166,8 +176,9 @@
    ],
    "source": [
     "# Visualize the slurm queue\n",
-    "from jupyter_utils import SlurmQueueWidget\n",
+    "from src.jupyter_utils import SlurmQueueWidget\n",
     "\n",
+    "# This will display the slurm queue widget inside the jupyter notebook\n",
     "SlurmQueueWidget(runner.ssh_client).view()"
    ]
   }
