--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -72,16 +72,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add the HPCTools to the path so that we can import the libraries\n",
-    "import sys; sys.path.insert(1, '../')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,8 +92,8 @@
     }
    ],
    "source": [
-    "import src.runners as r\n",
-    "from src.utils import GridConfig, flatten_names\n",
+    "from hpctools import runners as r\n",
+    "from hpctools.utils import GridConfig, flatten_names\n",
     "\n",
     "# Here we need to use the appropriate runner, since the cluster login node is accessible via SSH we use the SSHRunner\n",
     "runner = r.SSHRunner(\n",
@@ -176,7 +166,7 @@
    ],
    "source": [
     "# Visualize the slurm queue\n",
-    "from src.jupyter_utils import SlurmQueueWidget\n",
+    "from hpctools.jupyter_utils import SlurmQueueWidget\n",
     "\n",
     "# This will display the slurm queue widget inside the jupyter notebook\n",
     "SlurmQueueWidget(runner.ssh_client).view()"
