refactor: deduplicated code

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting to remote host\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hpctools import runners as r\n",
     "from hpctools.utils import GridConfig, flatten_names\n",
@@ -98,33 +90,23 @@
     "# Here we need to use the appropriate runner, since the cluster login node is accessible via SSH we use the SSHRunner\n",
     "runner = r.SSHRunner(\n",
     "    project_name=project_name,\n",
-    "    workdir=f\"/home/myhome/workspace/{project_name}\", # This is the remote directory where workspace for this project will be created\n",
-    "    hostname=\"hpc.example.it\",\n",
+    "    remote_workdir=f\"/home/myhome/workspace/{project_name}\", # This is the remote directory where workspace for this project will be created\n",
     "    username=\"example\",\n",
     "    key_filename=\"~/.ssh/example\",\n",
+    "    hostname=\"hpc.example.it\",\n",
     ")\n",
     "runner.connect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Uploading context to remote host\n",
-      "Submitted batch job 28603140\n",
-      "\n",
-      "\u001b[91m\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "runner.run(\n",
-    "    subexperiment_name=main.split(\".\")[0],\n",
+    "import os\n",
+    "job = runner.run(\n",
+    "    run_name=os.path.basename(globals()['__vsc_ipynb_file__']).rsplit(\".\", 1)[0], # Get the jupyter file name, works only for vscode jupyter server\n",
     "    template=\"../templates/slurm/arrayjob.slurm.j2\",\n",
     "    template_args={ # You can pass additional arguments to the template here\n",
     "        \"slurm_args\": slurm_config,\n",
@@ -146,30 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "389d1c3332fe4b30abecd4043ce51286",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Slurm Queue', layout=Layout(justify_content='center', width='100%')), HTML(value=\"…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Visualize the slurm queue\n",
     "from hpctools.jupyter_utils import SlurmQueueWidget\n",
     "\n",
     "# This will display the slurm queue widget inside the jupyter notebook\n",
-    "SlurmQueueWidget(runner.ssh_client).view()"
+    "SlurmQueueWidget(runner, job.name).view()"
    ]
   }
  ],
